tests/compile_fail/empty_path.stderr
error: found leading path separator, expected non-crate path
  --> tests/compile_fail/empty_path.rs:12:13
   |
12 |             ::{ A } => {},
   |             ^

error: expected identifier
  --> tests/compile_fail/empty_path.rs:12:15
   |
12 |             ::{ A } => {},
   |               ^
